<resources>
    <string name="app_name">Consult Hub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="login_hint_username_or_email">Username</string>
    <string name="password">Password</string>

    <string name="feat_login_welcome">Welcome to ConsultHub</string>
    <string name="feat_login_subtitle">Please Sign-in to continue</string>

    <string name="feat_search_friends_title">Search a friend</string>

    <string name="feat_main_login">Login</string>
    <string name="feat_main_sign_up">Sign Up</string>
    <string name="feat_main_forgot_password">Forgot password</string>
    <string name="feat_main_reset_password">Reset password</string>


    <string name="feat_login_new_jsr_consult_hub">New to JSR Consult Hub?</string>
    <string name="feat_login_register">Register</string>
    <string name="feat_login_google">Login with Google</string>
    <string name="feat_login_login">Login</string>
    <string name="feat_login_or">OR</string>
    <string name="feat_login_forgot_password">Forgot Password?</string>
    <string name="feat_login_hint_password">Password</string>
    <string name="feat_login_hint_username">Username</string>
    <string name="feat_login_title">Login</string>

    <!--
    <string name="joined_us_before">Joined us before?</string>
    <string name="feat_sign_up_login">Login</string>
    <string name="feat_sign_up_continue">Continue</string>
    <string name="feat_sign_up_privacy_policy">Privacy Policy</string>
    <string name="feat_sign_up_and">and</string>
    <string name="feat_sign_up_agreement">By signing up, you´re agree to our Terms &amp; Conditions and Privacy Policy</string>
    <string name="feat_sign_up_mobile">Mobile</string>
    <string name="feat_sign_up_sign_up">Sign up</string>
    <string name="feat_sign_up_full_name">Full name</string>
    <string name="feat_signup_privacy_policy">Privacy Policy</string>
    <string name="feat_sign_up_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="feat_sign_up_correct_credentials">Credentials are correct</string>
    <string name="feat_sign_up_incorrect_credentials">Credentials are incorrect,please check them</string>
    <string name="feat_sign_up_error_invalid_credentials">Invalid credentials</string>
    <string name="feat_sign_up_error_token_is_null">Error: the token is null</string>
    <string name="feat_sign_up_error_invalid_email">Invalid email address</string>
    <string name="feat_sign_up_error_invalid_password">Invalid password</string>
    <string name="feat_forgot_password_submit">Submit</string>
    <string name="feat_forgot_password_email_mobile">Email ID/Mobile number</string>
    <string name="feat_forgot_password_password">Password?</string>
    <string name="feat_forgot_password_do_not_worry_message">Don´t Worry! it happens. Please entre the address associated with your account.</string>
    <string name="feat_forgot_password_forgot">Forgot</string>
    <string name="feat_reset_password_confirm_new_password">Confirm new password</string>
    <string name="feat_reset_password_new_password">New password</string>
    <string name="feat_reset_password_reset">Reset</string>
    <string name="feat_forgot_password_invalid_email_mobile">Invalid Email or Mobile Number</string>
    <string name="feat_main_reset_feed">Feed</string>
    <string name="feat_feed_content_description_post_image">Post image</string>
    <string name="feat_login_user_name_not_found">username does not exist</string>
    <string name="feat_feed_profile_picture">Profile picture</string>
    <string name="feat_login_loading">Loading…</string>
    <string name="feat_login_error">Error: %s</string> -->

    <!-- medics, patients & consults-->
    <string name="feat_professional_title">Profesional</string>
    <string name="add_name">Nombre completo</string>
    <string name="add_document">Documento</string>
    <string name="feat_contact_title">Contactos</string>
    <string name="add_email">E-mail</string>
    <string name="add_phone">Teléfono o celular</string>
    <string name="feat_professional_address_title">Dirección profesional</string>
    <string name="feat_address_title">Dirección</string>
    <string name="add_street">Calle</string>
    <string name="add_number">Número</string>
    <string name="add_complement">Complemento</string>
    <string name="add_city">Ciudad</string>
    <string name="add_state">Estado</string>
    <string name="add_postal_code">Código postal</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="feat_patient_title">Paciente</string>
    <string name="feat_participants_title">Participantes</string>
    <string name="feat_datetime_title">Fecha y horario</string>
    <string name="date">Selecciona la fecha</string>
    <string name="time">Selecciona la hora</string>
    <string name="date_text">%d/%d/%d</string>
    <string name="time_text">%d: %d %s</string>
    <string name="specialty">Especialidad</string>
    <string name="select_specialty_content">Selecciona una especialidad</string>
    <string name="edit">Editar</string>
    <string name="deactivate_profile">Desactivar perfil</string>
    <string name="view">|</string>
    <string name="add_new_item">Agregar</string>
    <string name="search">Buscar…</string>
    <string name="image_state">Imagen de Estado</string>

    <!-- BottomBar -->
    <string name="medics">Medicos</string>
    <string name="patients">Pacientes</string>
    <string name="consults">Consultas</string>
</resources>