<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.consult.AddConsultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_large">

        <TextView
            android:id="@+id/participants_title"
            style="@style/JSRConsultHub.TextStyle.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            android:text="@string/feat_participants_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patient_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/participants_title"
            tools:hint="   Nombre del Paciente">

            <AutoCompleteTextView
                android:id="@+id/patient_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_extra_big"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/medic_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_name"
            tools:hint="   Nombre del Médico">

            <AutoCompleteTextView
                android:id="@+id/medic_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_extra_big"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/datetime_title"
            style="@style/JSRConsultHub.TextStyle.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:layout_marginBottom="@dimen/space_medium"
            android:text="@string/feat_datetime_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/medic_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datetime_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/guardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:layout_marginBottom="@dimen/space_medium"
            android:text="@string/guardar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time"/>

        <Button
            android:id="@+id/cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guardar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>